Fixed positiong with bottom alignment

--- a/belong-to-you/src/css.scss
+++ b/belong-to-you/src/css.scss
@@ -93,8 +93,8 @@ header {
       display: block;
 
       &:last-child {
-        position: absolute;
-        top: 95%;
+        position: fixed;
+        bottom:0;
 
         a {
           transition: none;
